src/test/run-pass/box-new.rs
// pretty-expanded FIXME #23616

fn main() {
    let _a = Box::new(1);
}
