src/test/compile-fail/restricted-keyword2.rs
// error-pattern:found `let` in restricted position

fn main() {
    enum let = int;
}
